# practice-code-moderncmake

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
cmake/Examples/: CMakeLists.txt  cudf.CMakeLists.txt
cmake/Modules/: ConfigureArrow.cmake  ConfigureGoogleTest.cmake
cmake/Templates/: Arrow.CMakeLists.txt.cmake  GoogleTest.CMakeLists.txt.cmake
conda/: README.md  environment.yml
